tests/ui/traits/const-traits/call-const-trait-method-fail.stderr
error[E0277]: the trait bound `u32: [const] Plus` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:5
   |
LL |     a.plus(b)
   |     ^
   |
help: make the `impl` of trait `Plus` `const`
   |
LL | impl const Plus for u32 {
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
